fixing some styles that were too global in nature for headers and spacing; added link to footer logo and alt tags to both logos

--- a/resources/assets/sass/components/_footer.scss
+++ b/resources/assets/sass/components/_footer.scss
@@ -49,6 +49,8 @@
 		justify-content: flex-end;
 		flex-direction: column;
 		padding-bottom: 50px;
+
+		a { text-decoration: none; }
 	}
 	input {
 		background-color: $transparent-white;
@@ -116,6 +118,7 @@
 		padding: 3px 0px;
  		a {
 			text-transform: none;
+			text-decoration: none;
 		}
 	}
 }
